logged URL in service call, also updated to use constant for encoding type